--- a/BluePrism/BluePrism.csproj
+++ b/BluePrism/BluePrism.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Processing\DictionaryProcessing.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
